# testingcrew

./: LICENSE  README.md  pyproject.toml  report.md
db/: chroma.sqlite3
output/: selectors.json  test.feature  test.spec.ts
src/testingcrew/: crew.py  main.py
src/testingcrew/config/: agents.yaml  tasks.yaml
